[tool.poetry]
name = "vrp"
version = "0.0.1"
description = "Vehicle routing problem"
authors = ["slackroo <sumanthomgowda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.29.0"
scikit-learn = "^1.3.2"
PuLP = "^2.7.0"
matplotlib = "^3.8.2"
folium = "^0.15.1"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
